# cxx-auto-xtask

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js  xtask-schema.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml
cxx_auto_xtask/: all.html  index.html  sidebar-items.js  type.BoxError.html  type.BoxResult.html
cxx_auto_xtask/command/: fn.build.html  fn.check.html  fn.clang.html  fn.clippy.html  fn.cmake.html  fn.doc.html  fn.edit.html  fn.fmt.html  fn.miri.html  fn.tarpaulin.html  fn.test.html  fn.udeps.html  fn.valgrind.html  index.html  sidebar-items.js  struct.Context.html
cxx_auto_xtask/config/: enum.XtaskPlatformMacosSearchPath.html  index.html  sidebar-items.js  struct.CMakeContext.html  struct.Config.html  struct.RustToolchain.html  struct.RustToolchainToolchain.html  struct.Xtask.html  struct.XtaskClang.html  struct.XtaskPlatform.html  struct.XtaskPlatformMacos.html  struct.XtaskRust.html  struct.XtaskRustComponent.html  struct.XtaskRustToolchain.html
cxx_auto_xtask/detection/: fn.detect_editor.html  index.html
cxx_auto_xtask/handler/: fn.help.html  fn.result.html  fn.subcommand_result.html  fn.unused.html  index.html
cxx_auto_xtask/install/: index.html
cxx_auto_xtask/validation/: fn.validate_rust_toolchain.html  fn.validate_tool.html  index.html  sidebar-items.js  struct.Validation.html
cxx_xtask/: all.html  index.html  sidebar-items.js  type.BoxError.html  type.BoxResult.html
src/: command.rs  config.rs  detection.rs  handler.rs  install.rs  lib.rs  validation.rs  workspace.rs
(+197 files in other folders)
