[package]
publish = false
edition = "2021"
name = "cxx-auto-xtask"
version = "0.0.1"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-auto-xtask"
documentation = "https://silvanshade.github.io/cxx-auto-xtask/cxx_auto_xtask"

[features]
debug = []
default = []

[dependencies]
pico-args = "0.5"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
ureq = "2.7"
url = "2.4"
